# ipcisolated

./: Cargo.toml  README.md
src/: config.rs  main.rs  proxy.rs  redirector.rs
